Fix inline spacing and rationalise css

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -8,7 +8,6 @@
 
     // Positioning context for the mobile navigation icon
     position: relative;
-	font-family:monospace;
 }
 
 .site-title {
@@ -107,7 +106,6 @@
 .site-footer {
     border-top: 1px solid $grey-color-light;
     padding: $spacing-unit 0;
-	font-family:$alt-font-family;
 	font-size:0.8em;
 }
 
